# target-vendit

./: .gitignore  README.md  catalog.json  config.json.example  manifest.json  meltano.yml  pyproject.toml  requirements.txt
target-vendit/: __init__.py  target.py
target_vendit/: __init__.py  __main__.py  auth.py  client.py  sinks.py  target.py
tests/: test_buy_order_prices.py
